--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -9077,7 +9077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 33,
    "id": "404aaf11-bff1-4132-b269-44f365d16abc",
    "metadata": {},
    "outputs": [],
@@ -9096,13 +9096,13 @@
     "\n",
     "\n",
     "col = df_strain_to_haplo_ftsI.pop('index_y')\n",
-    "df_strain_to_haplo_ftsI.insert(1,' haplotype', col)\n",
+    "df_strain_to_haplo_ftsI.insert(1,'haplotype', col)\n",
     "df_strain_to_haplo_ftsI.drop(['haplo_str'], axis=1).rename(columns={'index_x': 'ID'}).to_excel(\"../test/output.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 3,
    "id": "6b71606a-59de-4cb2-951a-7c4d8d738fe8",
    "metadata": {},
    "outputs": [],
@@ -9127,53 +9127,362 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 5,
    "id": "766f325b-162c-4f84-b8e5-7823f09d8795",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index_x</th>\n",
+       "      <th>haplotype</th>\n",
+       "      <th>A530S (GCA/TCA)</th>\n",
+       "      <th>N526K (AAT/AAA)</th>\n",
+       "      <th>N526K (AAT/AAG)</th>\n",
+       "      <th>A502V (GCA/GTA)</th>\n",
+       "      <th>A502T (GCA/ACA)</th>\n",
+       "      <th>G490E (GGA/GAA)</th>\n",
+       "      <th>R451S (CGT/AGT)</th>\n",
+       "      <th>I449V (ATT/GTT)</th>\n",
+       "      <th>S385T (AGT/ACT)</th>\n",
+       "      <th>M377I (ATG/ATT)</th>\n",
+       "      <th>S357N (AGC/AAC)</th>\n",
+       "      <th>D350N (GAT/AAT)</th>\n",
+       "      <th>haplo_str</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HLR-106</td>\n",
+       "      <td>H9</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CTAACCGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>HLR-109</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CAAGCCGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>HLR-10</td>\n",
+       "      <td>H12</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CACGCCGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HLR-110</td>\n",
+       "      <td>H2</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CTAACCGTCACT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>HLR-111</td>\n",
+       "      <td>H16</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CACGCTGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>260</th>\n",
+       "      <td>HLR-568</td>\n",
+       "      <td>H8</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CACGTCGTCCCT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>HLR-569</td>\n",
+       "      <td>H8</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CACGTCGTCCCT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>HLR-571</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CAAGCCGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>HLR-572</td>\n",
+       "      <td>H1</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>CAAGCCGTCCCC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>HLR-573</td>\n",
+       "      <td>H4</td>\n",
+       "      <td>C</td>\n",
+       "      <td>A</td>\n",
+       "      <td>A</td>\n",
+       "      <td>G</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>G</td>\n",
+       "      <td>T</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>T</td>\n",
+       "      <td>CAAGCCGTCCCT</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>265 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index_x haplotype A530S (GCA/TCA) N526K (AAT/AAA) N526K (AAT/AAG)  \\\n",
+       "0    HLR-106        H9               C               T               A   \n",
+       "1    HLR-109        H1               C               A               A   \n",
+       "2     HLR-10       H12               C               A               C   \n",
+       "3    HLR-110        H2               C               T               A   \n",
+       "4    HLR-111       H16               C               A               C   \n",
+       "..       ...       ...             ...             ...             ...   \n",
+       "260  HLR-568        H8               C               A               C   \n",
+       "261  HLR-569        H8               C               A               C   \n",
+       "262  HLR-571        H1               C               A               A   \n",
+       "263  HLR-572        H1               C               A               A   \n",
+       "264  HLR-573        H4               C               A               A   \n",
+       "\n",
+       "    A502V (GCA/GTA) A502T (GCA/ACA) G490E (GGA/GAA) R451S (CGT/AGT)  \\\n",
+       "0                 A               C               C               G   \n",
+       "1                 G               C               C               G   \n",
+       "2                 G               C               C               G   \n",
+       "3                 A               C               C               G   \n",
+       "4                 G               C               T               G   \n",
+       "..              ...             ...             ...             ...   \n",
+       "260               G               T               C               G   \n",
+       "261               G               T               C               G   \n",
+       "262               G               C               C               G   \n",
+       "263               G               C               C               G   \n",
+       "264               G               C               C               G   \n",
+       "\n",
+       "    I449V (ATT/GTT) S385T (AGT/ACT) M377I (ATG/ATT) S357N (AGC/AAC)  \\\n",
+       "0                 T               C               C               C   \n",
+       "1                 T               C               C               C   \n",
+       "2                 T               C               C               C   \n",
+       "3                 T               C               A               C   \n",
+       "4                 T               C               C               C   \n",
+       "..              ...             ...             ...             ...   \n",
+       "260               T               C               C               C   \n",
+       "261               T               C               C               C   \n",
+       "262               T               C               C               C   \n",
+       "263               T               C               C               C   \n",
+       "264               T               C               C               C   \n",
+       "\n",
+       "    D350N (GAT/AAT)     haplo_str  \n",
+       "0                 C  CTAACCGTCCCC  \n",
+       "1                 C  CAAGCCGTCCCC  \n",
+       "2                 C  CACGCCGTCCCC  \n",
+       "3                 T  CTAACCGTCACT  \n",
+       "4                 C  CACGCTGTCCCC  \n",
+       "..              ...           ...  \n",
+       "260               T  CACGTCGTCCCT  \n",
+       "261               T  CACGTCGTCCCT  \n",
+       "262               C  CAAGCCGTCCCC  \n",
+       "263               C  CAAGCCGTCCCC  \n",
+       "264               T  CAAGCCGTCCCT  \n",
+       "\n",
+       "[265 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_strain_to_haplo_ftsI_transpep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a355f817-9881-4b7a-8e1c-fec081d42d98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "haplotype\n",
-       "H1     66\n",
-       "H2     35\n",
-       "H3     26\n",
-       "H4     19\n",
-       "H5     17\n",
-       "H6     16\n",
-       "H7     11\n",
-       "H8     10\n",
-       "H9      9\n",
-       "H10     7\n",
+       "H1     33\n",
+       "H2     25\n",
+       "H3     15\n",
+       "H4     14\n",
+       "H6     11\n",
+       "H5     11\n",
+       "H7      6\n",
        "H11     6\n",
+       "H10     6\n",
+       "H8      6\n",
+       "H9      6\n",
        "H12     5\n",
+       "H15     5\n",
        "H13     5\n",
        "H14     5\n",
-       "H15     4\n",
-       "H18     3\n",
-       "H17     3\n",
-       "H16     3\n",
-       "H21     2\n",
-       "H22     2\n",
-       "H19     2\n",
-       "H20     2\n",
-       "H25     1\n",
-       "H24     1\n",
-       "H26     1\n",
-       "H27     1\n",
-       "H28     1\n",
-       "H23     1\n",
-       "H29     1\n",
+       "H17     4\n",
+       "H18     4\n",
+       "H16     4\n",
+       "H23     3\n",
+       "H21     3\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_strain_to_haplo_ftsI_transpep['haplotype'].value_counts()"
+    "import pandas as pd\n",
+    "\n",
+    "df_322 = pd.read_excel('/Users/lbartels/Desktop/hihi/322_ids.xlsx')\n",
+    "df_mapping = df_strain_to_haplo_ftsI.loc[:,['index_x', 'haplotype']]\n",
+    "\n",
+    "pd.merge(df_322, df_mapping, left_on='ID', right_on='index_x', validate='many_to_one',how='left')['haplotype']"
    ]
   }
  ],
